cmake_minimum_required(VERSION 2.8)
project( main )
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
find_package( OpenCV REQUIRED )
add_executable( main main.cpp imageUtilities.cpp utilities.cpp interface.cpp Object.cpp Scene.cpp ImageObject.cpp Inventory.cpp Template.cpp)
target_link_libraries( main ${OpenCV_LIBS} X11 Xtst)
